--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-torch==2.2.0
-torchvision==0.17.0
-numpy==1.26.4
-opencv-python==4.8.1.78
-PyYAML==6.0.1
-tqdm==4.66.1
-watchdog==2.1.9
-matplotlib
-scipy==1.11.4
-timm
+opencv-python>=4.9.0
+numpy>=1.26.0
+scipy>=1.13.0
+Pillow>=10.2.0
+watchdog>=4.0.0
+matplotlib>=3.8.0
+torch>=2.2.0 --index-url https://download.pytorch.org/whl/cpu
+torchvision>=0.17.0 --index-url https://download.pytorch.org/whl/cpu
+ultralytics>=8.1.0
